syntax = "proto3";
option go_package = "./;pb";

// 用户基本数据
message UserInfo{
  int64 uid = 1;
  int64 create_at = 2;
  int64 delete_at = 3;

  int64 mobile = 4;
  string nickname = 5;
  string email = 6;
  int32 gender = 7;
  int32 role = 8;
  string avatar_url = 9;

  string password = 10; // hash
}
